samples/_failures_safe/1761598020_94c9ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0070c615.c: In function ‘main’:
./samples/SAFE/__tmp_0070c615.c:161:21: error: expected declaration or statement at end of input
  161 |                     if (fgets(input, sizeof(input), stdin) == NULL) {
      |                     ^~
./samples/SAFE/__tmp_0070c615.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0070c615.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0070c615.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0070c615.c:161:21: error: expected declaration or statement at end of input
